# flappy-birdz

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yaml
assets/: background.wgsl
src/: lib.rs  main.rs
src/game/: assets.rs  background.rs  bird.rs  camera.rs  config.rs  messages.rs  mod.rs  model.rs  pipes.rs  run.rs  score.rs  state.rs  ui.rs
src/game/bird/: hazards.rs  health.rs  input.rs  mod.rs  movement.rs  spawn.rs
src/game/pipes/: director.rs  mod.rs  scoring.rs  spawn.rs
