[package]
name = "flappy-birdz"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.18"

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# Keep or tighten them later once the project structure stabilizes.
[lints.clippy]
# Bevy systems often take many injected parameters.
too_many_arguments = "allow"
# Larger queries and system types commonly trigger this in Bevy code.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (including Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to https://github.com/bevyengine/bevy/issues/14291
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Better runtime performance at the cost of slower release builds.
codegen-units = 1
lto = "thin"